--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,13 @@
-server.port=5777
+# server.port=5777
+# spring.datasource.url=jdbc:mysql://localhost:3306/maestro?createDatabaseIfNotExist=true&useTimezone=true&serverTimezone=America/Sao_Paulo
+# spring.datasource.username=root
+# spring.datasource.password=root
+# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+server.port=8080
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST}:3306/maestro?createDatabaseIfNotExist=true&useTimezone=true&serverTimezone=America/Sao_Paulo
+spring.datasource.username=${MYSQL_DB_USERNAME}
+spring.datasource.password=${MYSQL_DB_PASSWORD}
+spring.jpa.properties.hibernate.hbm2ddl.auto=update
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/maestro?createDatabaseIfNotExist=true&useTimezone=true&serverTimezone=America/Sao_Paulo
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
